--- a/src/gunny/frame3/frame3.html.twig
+++ b/src/gunny/frame3/frame3.html.twig
@@ -47,65 +47,64 @@
 					</div>
 					<div class="danh-sach" id="danhSach-scrollWatch">
 						<h2 class="heading">THỢ SĂN MAY MẮN</h2>
-						<div id="danhSachSwiper" class="swiper">
-							<div class="swiper-wrapper">
-								<div class="swiper-slide">
+						<div id="danhSach">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
 									</div>
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="text-container">
 									<div class="text-top">
 										<span class="username">Nam Vui Vẻ</span>
 										đã trúng
@@ -113,7 +112,7 @@
 									<div class="text-bottom">LEGEND-Phi Tiêu Băng Giá</div>
 								</div>
 							</div>
-							<div id="danhSachScrollbar" class"swiper-scrollbar swiper-scrollbar-drag"></div>
+							{# <div id="danhSachScrollbar" class"swiper-scrollbar swiper-scrollbar-drag"></div> #}
 						</div>
 					</div>
 				</div>
