--- a/src/gunny/frame3/frame3.scss
+++ b/src/gunny/frame3/frame3.scss
@@ -237,7 +237,7 @@
 						color: rgb(155, 51, 0);
 					}
 				}
-				.swiper-slide:last-child {
+				.text-container:last-child {
 					border-bottom: 1px solid gray;
 				}
 
