--- a/src/gunny/popup/html/popup_congrats.html.twig
+++ b/src/gunny/popup/html/popup_congrats.html.twig
@@ -1,4 +1,4 @@
-<div id="popup-congrats" class="popup" data-block-id="{{ blockId }}">
+<div id="popup-congrats" class="popup">
 	<div
 		class="popup__background">
 		{# NOTE: add background images and video here #}
