--- a/src/prod/html/index.html.twig
+++ b/src/prod/html/index.html.twig
@@ -2,45 +2,43 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Website Platform</title>
-		<meta name="description" content="A Single Page Builder"/>
-		<meta property="og:title" content="Website Platform"/>
-		<meta property="og:description" content="A Single Page Builder"/>
-		<link rel="shortcut icon" href="assets/favicon-default.ico"/>
-		<meta property="og:image" content="assets/sharefb-default.jpg"/>
-	</head>
-	<body class="">
-		{% include "../../setup/html/_fbsdk.html.twig" %}
-		<div id="wrapper" class="wrapper wrapper--homepage scaleDesktop scaleMobile">
-			<div
-				id="wrapperContent" class="wrapper__content">
-				{# import your components (blocks) here #}
-				{% include "../../gunny/frame1/frame1.html.twig" with {"blockIdPostFix": "_EwBx8"} %}
-				{% include "../../gunny/frame2/frame2.html.twig" with {"blockIdPostFix": "_ASesx"} %}
-				{% include "../../gunny/frame3/frame3.html.twig" with {"blockIdPostFix": "_Ajs24"} %}
-			</div>
-		</div>
 
-		<div id="floating" class="floating">
-			{% include "../../gunny/float_left/float_left.html.twig" with {"blockIdPostFix": "_AB54vC"} %}
-			{% include "../../gunny/float_bottom/float_bottom.html.twig" with {"blockIdPostFix": "_Ahj5u9"} %}
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Website Platform</title>
+	<meta name="description" content="A Single Page Builder" />
+	<meta property="og:title" content="Website Platform" />
+	<meta property="og:description" content="A Single Page Builder" />
+	<link rel="shortcut icon" href="assets/favicon-default.ico" />
+	<meta property="og:image" content="assets/sharefb-default.jpg" />
+</head>
+
+<body class="">
+	{% include "../../setup/html/_fbsdk.html.twig" %}
+	<div id="wrapper" class="wrapper wrapper--homepage scaleDesktop scaleMobile">
+		<div id="wrapperContent" class="wrapper__content">
+			{# import your components (blocks) here #}
+			{% include "../../gunny/frame1/frame1.html.twig" with {"blockIdPostFix": "_EwBx8"} %}
+			{% include "../../gunny/frame2/frame2.html.twig" with {"blockIdPostFix": "_ASesx"} %}
+			{% include "../../gunny/frame3/frame3.html.twig" with {"blockIdPostFix": "_Ajs24"} %}
 		</div>
-		<div class="outer">
-			{% include '../../gunny/popup/html/popup_confirm.html.twig' with {"blockIdPostFix" : "_T2J5s"} %}
-			{% include '../../gunny/popup/html/popup_congrats.html.twig' with {"blockIdPostFix" : "_ythqK2"} %}
-			{% include '../../gunny/popup/html/popup_content.html.twig' with {"blockIdPostFix" : "_U2jsy8"} %}
-			{% include '../../gunny/popup/html/popup_signin.html.twig' with {"blockIdPostFix" : "_ajequ2"} %}
-		</div>
-		<div style="display: none;">
-			<div id="font-picker-primary" class="font-picker"></div>
-			<div id="font-picker-secondary" class="font-picker"></div>
-		</div>
-	</body>
+	</div>
+
+	<div id="floating" class="floating">
+		{% include "../../gunny/float_left/float_left.html.twig" with {"blockIdPostFix": "_AB54vC"} %}
+		{% include "../../gunny/float_bottom/float_bottom.html.twig" with {"blockIdPostFix": "_Ahj5u9"} %}
+	</div>
+	<div class="outer">
+		{% include '../../gunny/popup/html/popup_confirm.html.twig' %}
+		{% include '../../gunny/popup/html/popup_congrats.html.twig' %}
+		{% include '../../gunny/popup/html/popup_content.html.twig' %}
+		{% include '../../gunny/popup/html/popup_signin.html.twig' %}
+	</div>
+	<div style="display: none;">
+		<div id="font-picker-primary" class="font-picker"></div>
+		<div id="font-picker-secondary" class="font-picker"></div>
+	</div>
+</body>
+
 </html>
-
-{#
-undefined
-#}
